# OpenAce

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
aceboot/: init.conf  service.h
apps/: CMakeLists.txt
apps/AceGUITestApp/: AceGUITestApp.html  CMakeLists.txt  Main.cpp
apps/ButtonApp/: ButtonApp.lba  preview.html
apps/Camera/: CMakeLists.txt  Camera.html  Main.cpp
apps/Phone/: Main.cpp  phone.html
apps/Phone/tablet/: phone.html
apps/WeatherApp/: WeatherApp.lba  preview.html
base/: CMakeLists.txt  Makefile  cmake_install.cmake
base/frameworks/WebCpp/: WebCppApp.cpp  WebCppApp.h  main.cpp
cmake/: x86_64-elf-toolchain.cmake
device/qemu/: config.mk
device/utm/: OpenAce.utm
kernel/syscalls/: syscall.c
sdk/AceGUI/: CMakeLists.txt  framework.css  guide.html
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/unit/: test_devmgr.c  test_framework.h
tools/: run_lambda.sh  utm-setup.sh
ui/: CMakeLists.txt  ControlCenter.cpp  Makefile  cmake_install.cmake  control_center.html  controlcenter
ui/assets/: CMakeLists.txt
ui/assets/css/: CMakeLists.txt  acegui.css  openace_theme.css
ui/assets/js/: CMakeLists.txt  acegui.js
ui/components/: CMakeLists.txt  Makefile  cmake_install.cmake
ui/components/controls/: control_center.html  controlcenter
ui/components/gesture_navigation/: gesture_navigation.html
ui/components/home/: HomeScreen.cpp  Main.cpp  home_screen.html  home_screen.lba  preview.html
ui/components/home/phone/: home_screen.lba  preview.html
ui/components/home/tablet/: home_screen.html
ui/components/home/tv/: home_screen.html
ui/components/home/watch/: home_screen.html
ui/components/keyboard/: CMakeLists.txt  keyboard.html
ui/components/keyboard/tablet/: keyboard.html
ui/components/lock/: LockScreen.cpp  Main.cpp  lock_screen.html
ui/components/lock/tablet/: lock_screen.html
ui/components/navigation/: navigation_gesture.html
ui/components/notifications/: CMakeLists.txt  Notifications.html
ui/components/popup/: Popup.html
ui/include/: aceui.h  aceui_animation.h  aceui_event.h  aceui_font.h  aceui_graphics.h  aceui_image.h  aceui_input.h  aceui_layout.h  aceui_style.h  aceui_theme.h  aceui_widget.h  aceui_window.h
ui/src/: aceui.c  aceui_animation.c  aceui_event.c  aceui_font.c  aceui_image.c  aceui_input.c  aceui_layout.c  aceui_style.c  aceui_theme.c  aceui_widget.c  aceui_window.c
webcpp/: CMakeLists.txt
webcpp/include/: webcpp.h
webcpp/src/: webcpp.c  webcpp.cpp
